@@ -26,9 +26,11 @@
 
 package org.mitre.mpf.wfm.segmenting;
 
-import org.apache.camel.CamelContext;
-import org.apache.camel.Message;
-import org.apache.camel.impl.DefaultMessage;
+import java.util.List;
+import java.util.Map;
+
+import javax.inject.Inject;
+
 import org.mitre.mpf.wfm.buffers.DetectionProtobuf;
 import org.mitre.mpf.wfm.buffers.DetectionProtobuf.AudioTrack;
 import org.mitre.mpf.wfm.buffers.DetectionProtobuf.DetectionRequest.AudioRequest;
@@ -40,74 +42,66 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
 
-import javax.inject.Inject;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-
 @Component(AudioMediaSegmenter.REF)
 public class AudioMediaSegmenter implements MediaSegmenter {
     private static final Logger log = LoggerFactory.getLogger(AudioMediaSegmenter.class);
     public static final String REF = "audioMediaSegmenter";
 
-    private final CamelContext _camelContext;
+    private final TriggerProcessor _triggerProcessor;
 
     @Inject
-    AudioMediaSegmenter(CamelContext camelContext) {
-        _camelContext = camelContext;
+    AudioMediaSegmenter(TriggerProcessor triggerProcessor) {
+        _triggerProcessor = triggerProcessor;
     }
+
 
     @Override
-    public List<Message> createDetectionRequestMessages(Media media, DetectionContext context) {
-        log.warn("Media #{} is an audio file and will not be segmented.", media.getId());
-
+    public List<DetectionRequest> createDetectionRequests(Media media, DetectionContext context) {
+        log.info("Media #{} is an audio file and will not be segmented.", media.getId());
         if (!context.isFirstDetectionTask() && MediaSegmenter.feedForwardIsEnabled(context)) {
-            return createFeedForwardMessages(media, context);
+            return _triggerProcessor.getTriggeredTracks(media, context)
+                    .map(t -> createFeedForwardRequest(t, media, context))
+                    .toList();
         }
 
-        return Collections.singletonList(
-                createProtobufMessage(media, context,
-                                      AudioRequest.newBuilder().setStartTime(0).setStopTime(-1).build()));
+        var audioRequest = AudioRequest.newBuilder()
+                .setStartTime(0)
+                .setStopTime(-1)
+                .build();
+        var protobuf = createProtobuf(media, context, audioRequest);
+        return List.of(new DetectionRequest(protobuf));
     }
 
 
-    private Message createProtobufMessage(Media media, DetectionContext context,
-                                                 AudioRequest audioRequest) {
-        DetectionProtobuf.DetectionRequest request = MediaSegmenter
+    private static DetectionProtobuf.DetectionRequest createProtobuf(
+            Media media, DetectionContext context, AudioRequest audioRequest) {
+        return MediaSegmenter
                 .initializeRequest(media, context)
                 .setDataType(DetectionProtobuf.DetectionRequest.DataType.AUDIO)
                 .setAudioRequest(audioRequest)
                 .build();
-
-        Message message = new DefaultMessage(_camelContext);
-        message.setBody(request);
-        return message;
     }
 
-    private List<Message> createFeedForwardMessages(Media media, DetectionContext context) {
-        List<Message> messages = new ArrayList<>();
-        for (Track track : context.getPreviousTracks()) {
 
-            AudioRequest.Builder audioRequest = AudioRequest.newBuilder()
-                    .setStartTime(track.getStartOffsetTimeInclusive())
-                    .setStopTime(track.getEndOffsetTimeInclusive());
+    private static DetectionRequest createFeedForwardRequest(
+            Track track, Media media, DetectionContext ctx) {
+        AudioRequest.Builder audioRequest = AudioRequest.newBuilder()
+                .setStartTime(track.getStartOffsetTimeInclusive())
+                .setStopTime(track.getEndOffsetTimeInclusive());
 
-            Detection exemplar = track.getExemplar();
+        Detection exemplar = track.getExemplar();
 
-            AudioTrack.Builder audioTrackBuilder = audioRequest.getFeedForwardTrackBuilder()
-                    .setConfidence(exemplar.getConfidence())
-                    .setStartTime(track.getStartOffsetTimeInclusive())
-                    .setStopTime(track.getEndOffsetTimeInclusive());
+        AudioTrack.Builder audioTrackBuilder = audioRequest.getFeedForwardTrackBuilder()
+                .setConfidence(exemplar.getConfidence())
+                .setStartTime(track.getStartOffsetTimeInclusive())
+                .setStopTime(track.getEndOffsetTimeInclusive());
 
-            for (Map.Entry<String, String> entry : exemplar.getDetectionProperties().entrySet()) {
-                audioTrackBuilder.addDetectionPropertiesBuilder()
-                        .setKey(entry.getKey())
-                        .setValue(entry.getValue());
-            }
-
-            messages.add(createProtobufMessage(media, context, audioRequest.build()));
+        for (Map.Entry<String, String> entry : exemplar.getDetectionProperties().entrySet()) {
+            audioTrackBuilder.addDetectionPropertiesBuilder()
+                    .setKey(entry.getKey())
+                    .setValue(entry.getValue());
         }
-        return messages;
+        var protobuf = createProtobuf(media, ctx, audioRequest.build());
+        return new DetectionRequest(protobuf, track);
     }
 }
